fixed UI bugs in gallery and index

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
                         ניסיון רב בדיוקנאות וציורי קיר. אשמח לבצע עבורכם תמונה בהזמנה, בסגנונות שונים!
                     </p>
                 </section>
-                <div style="margin: 0 auto; width: 100%;">
-                    <img src="images/1.jpg" class="im" />
+                <div style="margin: 0 auto; width: 600px;">
+                    <img src="images/1.jpg" class="im" alt="image main" />
                     <img src="images/2.jpg" class="im" />
                 </div>
             </div>
