fixed gallery bug

--- a/gallery.html
+++ b/gallery.html
@@ -36,35 +36,35 @@
                     <div id="gallerycontainer">
                         <div id="rightgallery" style="float: right; height: 100%; width:140px !important;text-align: center;vertical-align: middle;">
                             <ul id="rightgallerycarousel" style="float:none;text-align:center;width:120px !important">
-                                <li id="gallery1" data-preview="images/gallery/g1-1.jpg"><a href="#" >
+                                <li id="gallery1" data-preview="images/gallery/g1-1.jpg" class="livergallery"><a href="#" >
                                     <div class="imgtitle">
                                         בעלי חיים</div>
                                     <img src="images/gallery/g1-1.jpg" height="80px" alt="בעלי חיים" /></a></li>
-                                <li id="gallery2" data-preview="images/gallery/g2-1.jpg"><a href="#">
+                                <li id="gallery2" data-preview="images/gallery/g2-1.jpg"  class="livergallery"><a href="#">
                                     <div class="imgtitle">
                                         פורטרט</div>
                                     <img src="images/gallery/g2-1.jpg" height="80px" alt="פורטרט" /></a></li>
-                                <li id="gallery3" data-preview="images/gallery/g3-1.jpg"><a href="#">
+                                <li id="gallery3" data-preview="images/gallery/g3-1.jpg"  class="livergallery"><a href="#">
                                     <div class="imgtitle">
                                         אבסטרקטי</div>
                                     <img src="images/gallery/g3-1.jpg" height="100px" alt="אבסטרקטי" /></a></li>
-                                <li id="gallery4" data-preview="images/gallery/g4-1.jpg"><a href="#">
+                                <li id="gallery4" data-preview="images/gallery/g4-1.jpg"  class="livergallery"><a href="#">
                                     <div class="imgtitle">
                                         משולב</div>
                                     <img src="images/gallery/g4-1.jpg" height="100px" alt="משולב" /></a></li>
-                                <li id="gallery5" data-preview="images/gallery/g5-1.jpg"><a href="#">
+                                <li id="gallery5" data-preview="images/gallery/g5-1.jpg"  class="livergallery"><a href="#">
                                     <div class="imgtitle">
                                         נוף</div>
                                     <img src="images/gallery/g5-1.jpg" height="100px" alt="ציור נוף" /></a></li>
-                                <li id="gallery6" data-preview="images/gallery/g6-1.jpg"><a href="#">
+                                <li id="gallery6" data-preview="images/gallery/g6-1.jpg"  class="livergallery"><a href="#">
                                     <div class="imgtitle">
                                         ציורי גוף</div>
                                     <img src="images/gallery/g6-1.jpg" height="100px" alt="ציורי גוף" /></a></li>
-                                <li id="gallery7" data-preview="images/gallery/g7-1.jpg"><a href="#">
+                                <li id="gallery7" data-preview="images/gallery/g7-1.jpg"  class="livergallery"><a href="#">
                                     <div class="imgtitle">
                                         ציורי קיר</div>
                                     <img src="images/gallery/g7-1.jpg" height="100px" alt="ציורי קיר" /></a></li>
-                                <li id="gallery8" data-preview="images/gallery/g8-1.jpg"><a href="#">
+                                <li id="gallery8" data-preview="images/gallery/g8-1.jpg"  class="livergallery"><a href="#">
                                     <div class="imgtitle">
                                         קריקטורה</div>
                                     <img src="images/gallery/g8-1.jpg" height="100px" alt="קריקטורה" /></a></li>
