--- a/faq.html
+++ b/faq.html
@@ -79,7 +79,9 @@
             </div>
         </div>
     </div>
-   
+     <footer>
+       Powered by lemon juice
+    </footer>
     <script src="scripts/global.js" type="text/javascript"></script>
 </body>
 </html>
