--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
             </div>
         </div>
     </div>
-    <footer style="width: 100%; margin: 0 auto;">
-        
+    <footer>
+       Powered by lemon juice
     </footer>
     <script src="scripts/global.js" type="text/javascript"></script>
 </body>
