--- a/index.html
+++ b/index.html
@@ -1,8 +1,14 @@
 ﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title>Zohar Gallery</title>
+    <title>Zohar Agmon's Gallery</title>
     <meta charset="utf-8">
+    <meta name="description" content="Paintings work of Zohar Agmon">
+
+    <meta property="og:title" content="Zohar Agmon's painting gallery" />
+    <meta property="og:image" content="http://zohargallery.omeriko9.com/images/gallery/g4-1.jpg" />
+      <meta property="og:url" content="http://zohargallery.omeriko9.com/index.html" />
+
     <link rel="stylesheet" type="text/css" href="styles/global.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="styles/menu.css" media="screen" />
     <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
