added message to FB button

--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
                     </div>
                 </li>
                 <li><a href="https://twitter.com/share" class="twitter-share-button" data-url="http://zohargallery.omeriko9.com"
-                    data-via="omeriko_9">Tweet</a> </li>
+                    data-via="omeriko_9"></a> </li>
             </ul>
         </div>
 
