UX expert changes
I did some expert changes.

--- a/gallery.html
+++ b/gallery.html
@@ -165,6 +165,9 @@
                                     src="images/gallery/g8-1.jpg" />
                             </a>
                         </div>
+                        <div style="width:90%;text-align:left;margin-bottom:20px;margin-top:-20px;">
+                        	<a href="order.html" class="sitebutton">להזמנה&nbsp;&nbsp;⬅</a>
+                        </div>
                     </div>
                 </section>
             </div>
