--- a/gallery.html
+++ b/gallery.html
@@ -66,7 +66,7 @@
                             <div class="imgtitle">
                                 פורטרט</div>
                             <hr />
-                            <div class="desctext">
+                            <div >
                             דיוקן יחיד/זוגי/קבוצתי כרצונכם - בצבע או בעפרון.
                             </div>
                             <a href="images/gallery/g2-1.jpg">
@@ -82,7 +82,7 @@
                              <div class="imgtitle">
                                 ציורי ילדים</div>
                             <hr />
-                            <div class="desctext">כל דמות אהובה מסרט או סדרה, מצוייר או אמיתי.</div>
+                            <div >כל דמות אהובה מסרט או סדרה, מצוייר או אמיתי.</div>
                             <a href="images/gallery/g9-1.jpg">
                             <img alt="preview image" id="Img18" class="galleryimage" src="images/gallery/g9-1.jpg" />
                             </a><a href="images/gallery/g9-2.jpg">
@@ -95,7 +95,7 @@
                             <div class="imgtitle">
                                 אבסטרקטי</div>
                             <hr />
-                            <div class="desctext">בהזמנת ציור אבסטרקטי תוכלו לבקש סגנון מסויים - שמח, עצוב, פסיכדלי, ו/או לציין נושא</div>
+                            <div >בהזמנת ציור אבסטרקטי תוכלו לבקש סגנון מסויים - שמח, עצוב, פסיכדלי, ו/או לציין נושא</div>
                             <a href="images/gallery/g3-1.jpg">
                             <img alt="preview image" id="Img2" class="galleryimage" src="images/gallery/g3-1.jpg" />
                             </a><a href="images/gallery/g3-2.jpg">
@@ -106,7 +106,7 @@
                             <div class="imgtitle">
                                 משולב</div>
                             <hr />
-                            <div class="desctext">
+                            <div >
                             ציור פנים של חבר או חברה בשילוב גוף של גיבור על, זמרת מפורסמת, שחקן כדורגל או דמות היסטורית יכול להיות מתנה נהדרת! כל שעליכם לעשות הוא לשלוח תמונת פנים של חבר או חברה ותמונת בסיס (אפשר גם לשלוח קישור), בצירוף הערות או הנחיות - אם יש.
                             </div>
                             <a href="images/gallery/g4-1.jpg">
@@ -116,7 +116,7 @@
                             <div class="imgtitle">
                                 נוף</div>
                             <hr />
-                            <div class="desctext">תמונת נוף מרהיבה תוסיף המון לביתכם - בין אם זה נוף דמיוני או ריאליסטי</div>
+                            <div >תמונת נוף מרהיבה תוסיף המון לביתכם - בין אם זה נוף דמיוני או ריאליסטי</div>
                             <a href="images/gallery/g5-1.jpg" >
                                 <img alt="preview image" id="Img5"   class="galleryimage"
                                     src="images/gallery/g5-1.jpg" />
@@ -136,7 +136,7 @@
                             <div class="imgtitle">
                                 ציורי גוף</div>
                             <hr />
-                            <div class="desctext" >דוגמא לציור זוכה מקום ראשון בתחרות "גוף במקום קנבס" לשנת 2012:</div>
+                            <div  >דוגמא לציור זוכה מקום ראשון בתחרות "גוף במקום קנבס" לשנת 2012:</div>
                             <a href="images/gallery/g6-1.jpg" >
                                 <img alt="preview image" id="Img6"  class="galleryimage"
                                     src="images/gallery/g6-1.jpg" />
@@ -144,7 +144,7 @@
                             <div class="imgtitle">
                                 ציורי קיר</div>
                             <hr />
-                            <div class="desctext">ציורי קיר לחדרי ילדים ומבוגרים! תנו לדמויות האהובות עליכם לקשט את ביתכם!</div>
+                            <div >ציורי קיר לחדרי ילדים ומבוגרים! תנו לדמויות האהובות עליכם לקשט את ביתכם!</div>
                             <a href="images/gallery/g7-1.jpg" >
                                 <img alt="preview image" id="Img7"  class="galleryimage"
                                     src="images/gallery/g7-1.jpg" />
@@ -158,7 +158,7 @@
                             <div class="imgtitle">
                                 קריקטורה</div>
                             <hr />
-                            <div class="desctext">העולם יכול להיות אפילו יותר מצחיק ממה שהוא באמת! תוכלו להזמין קריקטורה של חבריכם - מתנה נפלאה לכל אירוע!
+                            <div >העולם יכול להיות אפילו יותר מצחיק ממה שהוא באמת! תוכלו להזמין קריקטורה של חבריכם - מתנה נפלאה לכל אירוע!
 בהזמנת קריקטורה תוכלו לבקש מה בדיוק לשנות בציור המקורי.</div>
                             <a href="images/gallery/g8-1.jpg" >
                                 <img alt="preview image" id="Img8" class="galleryimage"
