--- a/contact.html
+++ b/contact.html
@@ -21,21 +21,16 @@
         </ul>
     </div>
    
-    <div class="social-media-buttons" style="margin: 0 auto; width: 600px;">
-            <ul class="social-media-list">
-                <li>
-                    <div class="fb-like" data-href="http://zohargallery.omeriko9.com" data-width="50"
-                        data-layout="button_count" data-action="like" data-show-faces="true" data-share="true">
-                    </div>
-                </li>
-                <li>
-                    <div class="g-plus" data-action="share" data-height="24">
-                    </div>
-                </li>
-                <li><a href="https://twitter.com/share" class="twitter-share-button" data-url="http://zohargallery.omeriko9.com"
-                    data-via="omeriko_9"></a> </li>
-            </ul>
-        </div>
+    <div class="social-media-buttons" >
+        <span style="height:30px !important;overflow:hidden;" class="fb-like" data-href="http://zohargallery.omeriko9.com/index.html" data-width="200"
+            data-layout="button" data-action="like" data-show-faces="true" data-share="true">
+        </span>
+         <span style="width:250px;overflow:hidden;"  class="g-plus" data-action="share" data-height="30">
+                    </span>
+                    <span  style="vertical-align:top;">
+                   <a href="https://twitter.com/share" class="twitter-share-button" data-via="omeriko_9" data-size="large"></a>
+                    </span>
+    </div>
 
 
     <div id="container">
