--- a/faq.html
+++ b/faq.html
@@ -2,10 +2,12 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title>Zohar Gallery</title>
+     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="styles/global.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="styles/menu.css" media="screen" />
     <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
-
+
+
 </head>
 <body>
     <div id="fb-root">
