--- a/order.html
+++ b/order.html
@@ -41,7 +41,7 @@
                     <p style="line-height: 30px;">
                         <b>איך זה עובד?</b>
                         <br />
-                        <ul style="list-style:circle">
+                        <ul style="list-style:circle;line-height: 30px;">
                             <li>אתם שולחים בקשה ל zoharagmon at gmail.com עם הזמנה של הציור. נא לציין: תוכן הציור,
                                 גודל הציור המבוקש, סגנון הציור (אקריליק על קנבס, עפרונות על בריסטול), בקשות מיוחדות,
                                 מועד ביצוע מבוקש וטלפון לבירורים. במידה ומדובר בדיוקן של בני אדם ו/או חיות מחמד,
