--- a/index.html
+++ b/index.html
@@ -15,14 +15,20 @@
     <div id="fb-root">
     </div>
     <div id="menu">
-        <ul>
+   
+        <ul class="scroller_anchor">
             <li><a href="index.html">ברוכים הבאים</a></li>
             <li><a href="gallery.html">גלריה</a></li>
             <li><a href="order.html" id="order">הזמנת ציור</a></li>
             <li><a href="contact.html">צור קשר</a></li>
             <li><a href="faq.html">שאלות נפוצות</a></li>
         </ul>
+ 		
     </div>
+     <div id="logo">
+                                 <img src="images/logo2.png" style="vertical-align: top;" " />
+
+     </div>
     <div class="social-media-buttons" >
         <span style="height:30px !important;overflow:hidden;" class="fb-like" data-href="http://zohargallery.omeriko9.com/index.html" data-width="200"
             data-layout="button" data-action="like" data-show-faces="true" data-share="true">
