--- a/order.html
+++ b/order.html
@@ -19,7 +19,10 @@
             <li><a href="faq.html">שאלות נפוצות</a></li>
         </ul>
     </div>
+  <div id="logo">
+                                 <img src="images/logo2.png" style="vertical-align: top;" " />
 
+     </div>
       <div class="social-media-buttons" >
         <span style="height:30px !important;overflow:hidden;" class="fb-like" data-href="http://zohargallery.omeriko9.com/index.html" data-width="200"
             data-layout="button" data-action="like" data-show-faces="true" data-share="true">
