--- a/faq.html
+++ b/faq.html
@@ -27,7 +27,7 @@
      </div>
     <div class="social-media-buttons" >
         <span style="height:29px !important;overflow:hidden;" class="fb-like" data-href="http://zohargallery.omeriko9.com/index.html" data-width="200"
-            data-layout="button" data-action="like" data-show-faces="true" data-share="true">
+            data-layout="button" data-action="like" data-show-faces="false" data-share="true">
         </span>
          <span style="width:250px;overflow:hidden;"  class="g-plus" data-action="share" data-height="30">
                     </span>
