--- a/index.html
+++ b/index.html
@@ -57,13 +57,12 @@
                     <div style="margin: 0 auto; width: 75%;">
                         <div>
                             <img src="images/1.jpg" class="im" style="vertical-align: top;" alt="image main; float:right;" />
-                            <span style="text-align: right; float: left" class="desctext">מציירת את אחת מהעבודות
-                                בבית הספר לאמנות תלמה ילין. וכמובן טקסט נוסף יוכנס כאן שיגיד משהו מעניין לגבי הציור
-                                או לגבי העשיייה</span>
+                            <span style="float: left" class="desctext">מציירת את אחת מהעבודות
+                                בבית הספר לאמנות תלמה ילין</span>
                         </div>
                         <div style="margin-top: 50px; margin-bottom: 50px;">
                             <img src="images/2.jpg" style="vertical-align: top;" class="im" />
-                            <span style="text-align: right; float: left;" class="desctext">בפארק, מציירת משפחה מקרית
+                            <span style="float: left;" class="desctext">בפארק, מציירת משפחה מקרית
                                 גת.</span>
                         </div>
                         <div>
