--- a/faq.html
+++ b/faq.html
@@ -2,14 +2,11 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title>Zohar Gallery</title>
-     <meta charset="utf-8">
+    <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="styles/global.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="styles/menu.css" media="screen" />
     <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
-        <script src="scripts/global.js" type="text/javascript"></script>
-
-
-
+    <script src="scripts/global.js" type="text/javascript"></script>
 </head>
 <body>
     <div id="fb-root">
@@ -18,33 +15,28 @@
         <ul>
             <li><a href="index.html">ברוכים הבאים</a></li>
             <li><a href="gallery.html">גלריה</a></li>
-            <li><a href="order.html"  id="order">הזמנת ציור</a></li>
+            <li><a href="order.html" id="order">הזמנת ציור</a></li>
             <li><a href="contact.html">צור קשר</a></li>
             <li><a href="faq.html">שאלות נפוצות</a></li>
         </ul>
     </div>
-      <div id="logo">
-                                 <img src="images/logo3.png" style="vertical-align: top;" " />
-
-     </div>
-    <div class="social-media-buttons" >
-        <span style="height:29px !important;overflow:hidden;" class="fb-like" data-href="http://zohargallery.omeriko9.com/index.html" data-width="200"
-            data-layout="button" data-action="like" data-show-faces="false" data-share="true">
-        </span>
-         <span style="width:250px;overflow:hidden;"  class="g-plus" data-action="share" data-height="30">
-                    </span>
-                    <span  style="vertical-align:top;">
-                   <a href="https://twitter.com/share" class="twitter-share-button" data-via="omeriko_9" data-size="large"></a>
-                    </span>
+    <div id="logo">
+        <img src="images/logo3.png" style="vertical-align: top;" />
     </div>
-
-
+    <div class="social-media-buttons">
+        <span style="height: 29px !important; overflow: hidden;" class="fb-like" data-href="http://zohargallery.omeriko9.com/index.html"
+            data-width="200" data-layout="button" data-action="like" data-show-faces="false"
+            data-share="true"></span><span style="width: 250px; overflow: hidden;" class="g-plus"
+                data-action="share" data-height="30"></span><span style="vertical-align: top;"><a
+                    href="https://twitter.com/share" class="twitter-share-button" data-via="omeriko_9"
+                    data-size="large"></a></span>
+    </div>
     <style>
         p > b
         {
             line-height: 40px;
         }
-     </style>
+    </style>
     <div id="container">
         <div id="transparent">
             <div class="centerdiv">
@@ -52,7 +44,6 @@
                     <h1>
                         שאלות נפוצות</h1>
                     <p style="line-height: 20px;">
-                        
                         <b>מהם צבעי אקריליק?</b><br />
                         צבעי אקריליק הם צבעים על בסיס מים. השימוש בצבעים אלו נפוץ כחלופה נוחה לעבודה בצבעי
                         מים וצבע שמן ויתרונם הוא בייבוש מהיר לעומת צבעי שמן.<br />
@@ -61,7 +52,7 @@
                         <b>כמה זמן לוקח להכין ציור?</b><br />
                         הציור יהיה מוכן כחודש לאחר ההזמנה. אם מדובר במקרה מיוחד (כמו יום הולדת או תאריך
                         חשוב אחר), ניתן לבקש להקדים את מועד מסירת התמונה.<br />
-                         <b>איך אקבל את הציור?</b><br />
+                        <b>איך אקבל את הציור?</b><br />
                         לאחר הזמנת הציור נקבע מועד איסופו מת"א.<br />
                         <b>האם אפשר שיציירו אותי במקום ולא מתמונה?</b><br />
                         ישנה אפשרות כזו ברישום בעפרונות פחם. תתבקשו להישאר ישובים ללא תזוזה במשך כשעה ולזכות
@@ -82,7 +73,7 @@
             </div>
         </div>
     </div>
-     <footer>
+    <footer>
        Powered by lemon juice
     </footer>
 </body>
