--- a/gallery.html
+++ b/gallery.html
@@ -49,7 +49,7 @@
                     <h1>
                         גלריה</h1>
                     <div id="gallerycontainer">
-                      
+                     
                         <div class="gallery" style="margin: 30px;">
                             <div class="imgtitle">
                                 פורטרט</div>
@@ -58,13 +58,13 @@
                             דיוקן יחיד/זוגי/קבוצתי כרצונכם - בצבע או בעפרון.
                             </div>
                             <a href="images/gallery/g2-1.jpg">
-                                <img alt="preview image" id="Img1"  class="galleryimage" src="images/gallery/g2-1.jpg" />
+                                <img alt="preview image" id="Img1"  class="galleryimage" src="images/gallery/preview/g2-1.jpg" />
                             </a><a href="images/gallery/g2-2.jpg">  
-                                <img alt="preview image" id="Img10"  class="galleryimage" src="images/gallery/g2-2.jpg" />
-                            </a><a href="images/gallery/g2-3.jpg">  
-                                <img alt="preview image" id="Img11"  class="galleryimage" src="images/gallery/g2-3.jpg" />
-                            </a><a href="images/gallery/g2-4.jpg">  
-                                <img alt="preview image" id="Img12"  class="galleryimage" src="images/gallery/g2-4.jpg" />
+                                <img alt="preview image" id="Img10"  class="galleryimage" src="images/gallery/preview/g2-2.jpg" />
+                            </a><a href="images/gallery/g2-3.jpg">                                          
+                                <img alt="preview image" id="Img11"  class="galleryimage" src="images/gallery/preview/g2-3.jpg" />
+                            </a><a href="images/gallery/g2-4.jpg">                                           
+                                <img alt="preview image" id="Img12"  class="galleryimage" src="images/gallery/preview/g2-4.jpg" />
                             </a>
                             <div class="imgtitle">
                                 בעלי חיים</div>
@@ -72,11 +72,11 @@
                             <div>הנציחו את חיית המחמד האהובה עם ציור יפייפה.</div>
                             <div>
                                 <a href="images/gallery/g1-1.jpg">
-                                    <img alt="preview image" id="preview" class="galleryimage" src="images/gallery/g1-1.jpg" />
+                                    <img alt="preview image" id="preview" class="galleryimage" src="images/gallery/preview/g1-1.jpg" />
                                 </a><a href="images/gallery/g1-2.jpg">
-                                    <img alt="preview image" id="Img3"  class="galleryimage" src="images/gallery/g1-2.jpg" />
-                                </a><a href="images/gallery/g1-3.jpg">
-                                    <img alt="preview image" id="Img9"  class="galleryimage" src="images/gallery/g1-3.jpg" />
+                                    <img alt="preview image" id="Img3"  class="galleryimage" src="images/gallery/preview/g1-2.jpg" />
+                                </a><a href="images/gallery/g1-3.jpg">                                           
+                                    <img alt="preview image" id="Img9"  class="galleryimage" src="images/gallery/preview/g1-3.jpg" />
                                 </a>
                             </div>
 
@@ -85,11 +85,11 @@
                             <hr />
                             <div >כל דמות אהובה מסרט או סדרה, מצוייר או אמיתי.</div>
                             <a href="images/gallery/g9-1.jpg">
-                            <img alt="preview image" id="Img18" class="galleryimage" src="images/gallery/g9-1.jpg" />
+                            <img alt="preview image" id="Img18" class="galleryimage" src="images/gallery/preview/g9-1.jpg" />
                             </a><a href="images/gallery/g9-2.jpg">
-                                <img alt="preview image" id="Img19" class="galleryimage" src="images/gallery/g9-2.jpg" />
+                                <img alt="preview image" id="Img19" class="galleryimage" src="images/gallery/preview/g9-2.jpg" />
                             </a><a href="images/gallery/g9-3.jpg">
-                                <img alt="preview image" id="Img20"  class="galleryimage" src="images/gallery/g9-3.jpg" />
+                                <img alt="preview image" id="Img20"  class="galleryimage" src="images/gallery/preview/g9-3.jpg" />
                             </a>
 
 
@@ -98,11 +98,11 @@
                             <hr />
                             <div >בהזמנת ציור אבסטרקטי תוכלו לבקש סגנון מסויים - שמח, עצוב, פסיכדלי, ו/או לציין נושא</div>
                             <a href="images/gallery/g3-1.jpg">
-                            <img alt="preview image" id="Img2" class="galleryimage" src="images/gallery/g3-1.jpg" />
+                            <img alt="preview image" id="Img2" class="galleryimage" src="images/gallery/preview/g3-1.jpg" />
                             </a><a href="images/gallery/g3-2.jpg">
-                                <img alt="preview image" id="Img14" class="galleryimage" src="images/gallery/g3-2.jpg" />
+                                <img alt="preview image" id="Img14" class="galleryimage" src="images/gallery/preview/g3-2.jpg" />
                             </a><a href="images/gallery/g3-3.jpg">
-                                <img alt="preview image" id="Img13"  class="galleryimage" src="images/gallery/g3-3.jpg" />
+                                <img alt="preview image" id="Img13"  class="galleryimage" src="images/gallery/preview/g3-3.jpg" />
                             </a>
                             <div class="imgtitle">
                                 משולב</div>
@@ -111,7 +111,7 @@
                             ציור פנים של חבר או חברה בשילוב גוף של גיבור על, זמרת מפורסמת, שחקן כדורגל או דמות היסטורית יכול להיות מתנה נהדרת! כל שעליכם לעשות הוא לשלוח תמונת פנים של חבר או חברה ותמונת בסיס (אפשר גם לשלוח קישור), בצירוף הערות או הנחיות - אם יש.
                             </div>
                             <a href="images/gallery/g4-1.jpg">
-                                <img alt="preview image" id="Img4"  class="galleryimage" src="images/gallery/g4-1.jpg" />
+                                <img alt="preview image" id="Img4"  class="galleryimage" src="images/gallery/preview/g4-1.jpg" />
                             </a>
 
                             <div class="imgtitle">
@@ -120,17 +120,17 @@
                             <div >תמונת נוף מרהיבה תוסיף המון לביתכם - בין אם זה נוף דמיוני או ריאליסטי</div>
                             <a href="images/gallery/g5-1.jpg" >
                                 <img alt="preview image" id="Img5"   class="galleryimage"
-                                    src="images/gallery/g5-1.jpg" />
+                                    src="images/gallery/preview/g5-1.jpg" />
                             </a>
 
                              <a href="images/gallery/g5-2.jpg">
                                 <img alt="preview image" id="Img15"   class="galleryimage"
-                                    src="images/gallery/g5-2.jpg" />
+                                    src="images/gallery/preview/g5-2.jpg" />
                             </a>
 
                               <a href="images/gallery/g5-3.jpg">
                                 <img alt="preview image" id="Img17"   class="galleryimage"
-                                    src="images/gallery/g5-3.jpg" />
+                                    src="images/gallery/preview/g5-3.jpg" />
                             </a>
 
 
@@ -140,7 +140,7 @@
                             <div  >דוגמא לציור זוכה מקום ראשון בתחרות "גוף במקום קנבס" לשנת 2012:</div>
                             <a href="images/gallery/g6-1.jpg" >
                                 <img alt="preview image" id="Img6"  class="galleryimage"
-                                    src="images/gallery/g6-1.jpg" />
+                                    src="images/gallery/preview/g6-1.jpg" />
                             </a>
                             <div class="imgtitle">
                                 ציורי קיר</div>
@@ -148,12 +148,12 @@
                             <div >ציורי קיר לחדרי ילדים ומבוגרים! תנו לדמויות האהובות עליכם לקשט את ביתכם!</div>
                             <a href="images/gallery/g7-1.jpg" >
                                 <img alt="preview image" id="Img7"  class="galleryimage"
-                                    src="images/gallery/g7-1.jpg" />
+                                    src="images/gallery/preview/g7-1.jpg" />
                             </a>
 
                             <a href="images/gallery/g7-2.jpg" >
                                 <img alt="preview image" id="Img16"  class="galleryimage"
-                                    src="images/gallery/g7-2.jpg" />
+                                    src="images/gallery/preview/g7-2.jpg" />
                             </a>
 
                             <div class="imgtitle">
@@ -163,7 +163,7 @@
 בהזמנת קריקטורה תוכלו לבקש מה בדיוק לשנות בציור המקורי.</div>
                             <a href="images/gallery/g8-1.jpg" >
                                 <img alt="preview image" id="Img8" class="galleryimage"
-                                    src="images/gallery/g8-1.jpg" />
+                                    src="images/gallery/preview/g8-1.jpg" />
                             </a>
                         </div>
                         <div style="width:90%;text-align:left;margin-bottom:20px;margin-top:-20px;">
