--- a/gallery.html
+++ b/gallery.html
@@ -167,7 +167,7 @@
                             </a>
                         </div>
                         <div style="width:90%;text-align:left;margin-bottom:20px;margin-top:-20px;">
-                        	<a href="order.html" class="sitebutton">להזמנה&nbsp;&nbsp;⬅</a>
+                        	<a href="order.html" class="sitebutton">להזמנה&nbsp;&nbsp;</a>
                         </div>
                     </div>
                 </section>
