--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         </div>
                         <div>
                             <p style="float: left; width: 100%; text-align: left;">
-                                <a href="gallery.html" class="sitebutton">לגלריה&nbsp;&nbsp;⬅</a>
+                                <a href="gallery.html" class="sitebutton">לגלריה&nbsp;&nbsp;</a>
                             </p>
                         </div>
                     </div>
