preview images for new images

--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
               <section>
                     <h1>
                         צור קשר</h1>
-                    <p>לשאלות, הצעות והזמנות ניתן לפנות אלי באימייל zoharagmon at gmail.com או בטלפון 050-5100028.
+                    <p>לשאלות, הצעות והזמנות ניתן לפנות אלי באימייל zoharagmon@gmail.com או בטלפון 050-5100028.
                     </p>
                 </section>
             </div>
