--- a/gallery.html
+++ b/gallery.html
@@ -57,6 +57,9 @@
                             <div >
                             דיוקן יחיד/זוגי/קבוצתי כרצונכם - בצבע או בעפרון.
                             </div>
+							<a href="images/gallery/g2-5.jpg">
+                                <img alt="preview image" id="Img2-5"  class="galleryimage" src="images/gallery/preview/g2-5.jpg" />
+                            </a>
                             <a href="images/gallery/g2-1.jpg">
                                 <img alt="preview image" id="Img1"  class="galleryimage" src="images/gallery/preview/g2-1.jpg" />
                             </a><a href="images/gallery/g2-2.jpg">  
@@ -91,6 +94,11 @@
                             </a><a href="images/gallery/g9-3.jpg">
                                 <img alt="preview image" id="Img20"  class="galleryimage" src="images/gallery/preview/g9-3.jpg" />
                             </a>
+                            </a><a href="images/gallery/g9-4.jpg">
+                                <img alt="preview image" id="Img9-4"  class="galleryimage" src="images/gallery/preview/g9-4.jpg" />
+                            </a><a href="images/gallery/g9-5.jpg">
+                                <img alt="preview image" id="Img9-5"  class="galleryimage" src="images/gallery/preview/g9-5.jpg" />
+                            </a>
 
 
                             <div class="imgtitle">
@@ -103,6 +111,10 @@
                                 <img alt="preview image" id="Img14" class="galleryimage" src="images/gallery/preview/g3-2.jpg" />
                             </a><a href="images/gallery/g3-3.jpg">
                                 <img alt="preview image" id="Img13"  class="galleryimage" src="images/gallery/preview/g3-3.jpg" />
+                            </a><a href="images/gallery/g3-4.jpg">
+                                <img alt="preview image" id="Img3-4"  class="galleryimage" src="images/gallery/preview/g3-4.jpg" />
+                            </a><a href="images/gallery/g3-5.jpg">
+                                <img alt="preview image" id="Img3-5"  class="galleryimage" src="images/gallery/preview/g3-5.jpg" />
                             </a>
                             <div class="imgtitle">
                                 משולב</div>
@@ -142,6 +154,10 @@
                                 <img alt="preview image" id="Img6"  class="galleryimage"
                                     src="images/gallery/preview/g6-1.jpg" />
                             </a>
+                            <a href="images/gallery/g6-2.jpg" >
+                                <img alt="preview image" id="Img6-2"  class="galleryimage"
+                                    src="images/gallery/preview/g6-2.jpg" />
+                            </a>
                             <div class="imgtitle">
                                 ציורי קיר</div>
                             <hr />
@@ -164,6 +180,110 @@
                             <a href="images/gallery/g8-1.jpg" >
                                 <img alt="preview image" id="Img8" class="galleryimage"
                                     src="images/gallery/preview/g8-1.jpg" />
+                            </a>
+                            <a href="images/gallery/g8-2.jpg" >
+                                <img alt="preview image" id="Img8-2" class="galleryimage"
+                                    src="images/gallery/preview/g8-2.jpg" />
+                            </a>
+                            <div class="imgtitle">
+                                עיצוב פלייר או מודעה</div>
+                            <hr />
+                            <div >תנו לי לעזור לכם לעצב מודעה מושכת לעין עם ציור מקורי</div>
+                            <a href="images/gallery/g10-1.jpg" >
+                                <img alt="preview image" id="Img10-1" class="galleryimage"
+                                    src="images/gallery/preview/g10-1.jpg" />
+                            </a>
+                            <a href="images/gallery/g10-2.jpg" >
+                                <img alt="preview image" id="Img10-2" class="galleryimage"
+                                    src="images/gallery/preview/g10-2.jpg" />
+                            </a>
+                            <div class="imgtitle">
+                                רישום</div>
+                            <hr />
+                            <div >רישום בפחם או בעפרונות</div>
+                            <a href="images/gallery/g11-1.jpg" >
+                                <img alt="preview image" id="Img11-1" class="galleryimage"
+                                    src="images/gallery/preview/g11-1.jpg" />
+                            </a>
+                            <a href="images/gallery/g11-2.jpg" >
+                                <img alt="preview image" id="Img11-2" class="galleryimage"
+                                    src="images/gallery/preview/g11-2.jpg" />
+                            </a>
+                            <a href="images/gallery/g11-3.jpg" >
+                                <img alt="preview image" id="Img11-3" class="galleryimage"
+                                    src="images/gallery/preview/g11-3.jpg" />
+                            </a>
+                            <a href="images/gallery/g11-4.jpg" >
+                                <img alt="preview image" id="Img11-4" class="galleryimage"
+                                    src="images/gallery/preview/g11-4.jpg" />
+                            </a>
+                            <a href="images/gallery/g11-5.jpg" >
+                                <img alt="preview image" id="Img11-5" class="galleryimage"
+                                    src="images/gallery/preview/g11-5.jpg" />
+                            </a>
+                            <a href="images/gallery/g11-6.jpg" >
+                                <img alt="preview image" id="Img11-6" class="galleryimage"
+                                    src="images/gallery/preview/g11-6.jpg" />
+                            </a>
+                            <a href="images/gallery/g11-7.jpg" >
+                                <img alt="preview image" id="Img11-7" class="galleryimage"
+                                    src="images/gallery/preview/g11-7.jpg" />
+                            </a>
+                            <a href="images/gallery/g11-8.jpg" >
+                                <img alt="preview image" id="Img11-8" class="galleryimage"
+                                    src="images/gallery/preview/g11-8.jpg" />
+                            </a>
+                            <a href="images/gallery/g11-9.jpg" >
+                                <img alt="preview image" id="Img11-9" class="galleryimage"
+                                    src="images/gallery/preview/g11-9.jpg" />
+                            </a>
+                            <a href="images/gallery/g11-10.jpg" >
+                                <img alt="preview image" id="Img11-10" class="galleryimage"
+                                    src="images/gallery/preview/g11-10.jpg" />
+                            </a>
+                            <a href="images/gallery/g11-11.jpg" >
+                                <img alt="preview image" id="Img11-11" class="galleryimage"
+                                    src="images/gallery/preview/g11-11.jpg" />
+                            </a>
+                            <a href="images/gallery/g11-12.jpg" >
+                                <img alt="preview image" id="Img11-12" class="galleryimage"
+                                    src="images/gallery/preview/g11-12.jpg" />
+                            </a>
+                            <a href="images/gallery/g11-13.jpg" >
+                                <img alt="preview image" id="Img11-13" class="galleryimage"
+                                    src="images/gallery/preview/g11-13.jpg" />
+                            </a>
+                            <a href="images/gallery/g11-14.jpg" >
+                                <img alt="preview image" id="Img11-14" class="galleryimage"
+                                    src="images/gallery/preview/g11-14.jpg" />
+                            </a>
+                            <a href="images/gallery/g11-15.jpg" >
+                                <img alt="preview image" id="Img11-15" class="galleryimage"
+                                    src="images/gallery/preview/g11-15.jpg" />
+                            </a>
+                            <a href="images/gallery/g11-16.jpg" >
+                                <img alt="preview image" id="Img11-16" class="galleryimage"
+                                    src="images/gallery/preview/g11-16.jpg" />
+                            </a>
+                            <a href="images/gallery/g11-17.jpg" >
+                                <img alt="preview image" id="Img11-17" class="galleryimage"
+                                    src="images/gallery/preview/g11-17.jpg" />
+                            </a>
+                            <a href="images/gallery/g11-18.jpg" >
+                                <img alt="preview image" id="Img11-18" class="galleryimage"
+                                    src="images/gallery/preview/g11-18.jpg" />
+                            </a>
+                            <a href="images/gallery/g11-19.jpg" >
+                                <img alt="preview image" id="Img11-19" class="galleryimage"
+                                    src="images/gallery/preview/g11-19.jpg" />
+                            </a>
+                            <a href="images/gallery/g11-21.jpg" >
+                                <img alt="preview image" id="Img11-21" class="galleryimage"
+                                    src="images/gallery/preview/g11-21.jpg" />
+                            </a>
+                            <a href="images/gallery/g11-22.jpg" >
+                                <img alt="preview image" id="Img11-22" class="galleryimage"
+                                    src="images/gallery/preview/g11-22.jpg" />
                             </a>
                         </div>
                         <div style="width:90%;text-align:left;margin-bottom:20px;margin-top:-20px;">
