--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <meta name="description" content="Paintings work of Zohar Agmon">
     <meta property="og:title" content="Zohar Agmon's painting gallery" />
-    <meta property="og:image" content="http://zohargallery.omeriko9.com/images/gallery/g4-1.jpg" />
-    <meta property="og:url" content="http://zohargallery.omeriko9.com/index.html" />
+    <meta property="og:image" content="http://zohargallery.omeriko9.com/images/1.jpg" />
+    <meta property="og:url" content="http://zohargallery.omeriko9.com" />
     <link rel="stylesheet" type="text/css" href="styles/global.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="styles/menu.css" media="screen" />
     <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
