--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta property="og:title" content="Zohar Agmon's painting gallery" />
     <meta property="og:image" content="http://zohargallery.omeriko9.com/images/1.jpg" />
     <meta property="og:url" content="http://zohargallery.omeriko9.com" />
+    <meta name="google-site-verification" content="Yu0DMpRY9DlPcs9m8zC73wqbygKWEdyYJmCdIhH61E8" />
     <link rel="stylesheet" type="text/css" href="styles/global.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="styles/menu.css" media="screen" />
     <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
