--- a/master.html
+++ b/master.html
@@ -20,11 +20,11 @@
     <div id="menu">
    
         <ul class="scroller_anchor">
-            <li><a href="index.html">ברוכים הבאים</a></li>
-            <li><a href="gallery.html">גלריה</a></li>
-            <li><a href="order.html" id="order">הזמנת ציור</a></li>
-            <li><a href="contact.html">צור קשר</a></li>
-            <li><a href="faq.html">שאלות נפוצות</a></li>
+            <li><a href="indexc.html" target="iframe">ברוכים הבאים</a></li>
+            <li><a href="galleryc.html" target="iframe">גלריה</a></li>
+            <li><a href="orderc.html" id="order"  target="iframe">הזמנת ציור</a></li>
+            <li><a href="contactc.html" target="iframe">צור קשר</a></li>
+            <li><a href="faqc.html" target="iframe">שאלות נפוצות</a></li>
         </ul>
  		
     </div>
@@ -46,7 +46,7 @@
     <frameset rows="100%">
   <frameset cols="100%">
 
-      <iframe id="iframe" src="faqc.html" onLoad="calcHeight();" rameborder="0" style="border:0; overflow:hidden;overflow-x:hidden;overflow-y:hidden;height:100%;width:100%;top:0px;left:0px;right:0px;bottom:0px" height="100%" width="100%"></iframe>
+      <iframe id="iframe" src="indexc.html" onLoad="calcHeight();" rameborder="0" style="border:0; overflow:hidden;overflow-x:hidden;overflow-y:hidden;width:100%;top:0px;left:0px;right:0px;bottom:0px" height="100%" width="100%"></iframe>
 
   </frameset>
 </frameset>
