--- a/contactc.html
+++ b/contactc.html
@@ -12,9 +12,9 @@
 <body>
   
     <div id="container">
-        <div id="transparent"  style="margin:0;>
+        <div id="transparent" style="margin:0;">
             <div class="centerdiv">
-              <section>
+              <section style="padding-right: 20px;">
                     <h1>
                         צור קשר</h1>
                     <p>לשאלות, הצעות והזמנות ניתן לפנות אלי באימייל zoharagmon@gmail.com או בטלפון 050-5100028.
