--- a/faqc.html
+++ b/faqc.html
@@ -19,7 +19,7 @@
     <div id="container">
         <div id="transparent" style="margin:0;">
             <div class="centerdiv">
-                <section>
+                <section style="padding-right: 20px;">
                     <h1>
                         שאלות נפוצות</h1>
                     <p style="line-height: 20px;">
