--- a/galleryc.html
+++ b/galleryc.html
@@ -19,7 +19,7 @@
     <div id="container">
         <div id="transparent"  style="margin:0;>
             <div class="centerdiv">
-                <section>
+                <section style="padding-right: 20px;">
                     <h1>
                         גלריה</h1>
                     <div id="gallerycontainer">
