--- a/orderc.html
+++ b/orderc.html
@@ -15,7 +15,7 @@
     <div id="container">
         <div id="transparent"  style="margin:0;>
             <div class="centerdiv">
-                <section>
+                <section style="padding-right: 20px;">
                     <h1>
                         הזמנת ציור</h1>
                     <p style="line-height: 30px;">
