--- a/indexc.html
+++ b/indexc.html
@@ -24,7 +24,7 @@
                         ברוכים הבאים</h1>
                     <p>
                         אני זהר אגמון, מצטיינת מגמה לאומנות פלסטית בבית הספר תלמה ילין בעלת ניסיון רב בדיוקנאות
-                        וציורי קיר. אשמח לבצע עבורכם תמונה בהזמנה, בסגנונות שונים!
+                        וציורי קיר.<br>אשמח לבצע עבורכם תמונה בהזמנה, בסגנונות שונים!
                     </p>
                 </section>
                 <br />
