--- a/master.html
+++ b/master.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" type="text/css" href="styles/menu.css" media="screen" />
     <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
     <script src="scripts/global.js" type="text/javascript"></script>
+    <link rel="shortcut icon" href="images/favicon.ico">
 
 </head>
 <body>
