--- a/master.html
+++ b/master.html
@@ -21,11 +21,11 @@
     <div id="menu">
    
         <ul class="scroller_anchor">
-            <li><a href="indexc.html" target="iframe">ברוכים הבאים</a></li>
-            <li><a href="galleryc.html" target="iframe">גלריה</a></li>
-            <li><a href="orderc.html" id="order"  target="iframe">הזמנת ציור</a></li>
-            <li><a href="contactc.html" target="iframe">צור קשר</a></li>
-            <li><a href="faqc.html" target="iframe">שאלות נפוצות</a></li>
+            <li><a href="indexc.html" target="iframe" onclick="clearHeight();">ברוכים הבאים</a></li>
+            <li><a href="galleryc.html" target="iframe" onclick="clearHeight();">גלריה</a></li>
+            <li><a href="orderc.html" id="order"  target="iframe" onclick="clearHeight();">הזמנת ציור</a></li>
+            <li><a href="contactc.html" target="iframe" onclick="clearHeight();">צור קשר</a></li>
+            <li><a href="faqc.html" target="iframe" onclick="clearHeight();">שאלות נפוצות</a></li>
         </ul>
  		
     </div>
@@ -47,7 +47,7 @@
     <frameset rows="100%">
   <frameset cols="100%">
 
-      <iframe id="iframe" src="indexc.html" onLoad="calcHeight();" rameborder="0" style="border:0; overflow:hidden;overflow-x:hidden;overflow-y:hidden;width:100%;top:0px;left:0px;right:0px;bottom:0px" height="100%" width="100%"></iframe>
+      <iframe id="iframe" src="indexc.html" onLoad="calcHeight();" rameborder="0" style="border:0; overflow:hidden;overflow-x:hidden;overflow-y:hidden;width:100%;height:0;top:0px;left:0px;right:0px;bottom:0px" height="100%" width="100%"></iframe>
 
   </frameset>
 </frameset>
