--- a/master.html
+++ b/master.html
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html xmlns="http://www.w3.org/1999/xhtml" id="mainHtml">
 <head>
     <title>Zohar Agmon's Gallery</title>
     <meta charset="utf-8">
@@ -15,7 +15,7 @@
     <link rel="shortcut icon" href="images/favicon.ico">
 
 </head>
-<body>
+<body id="mainBody">
     <div id="fb-root">
     </div>
     <div id="menu">
@@ -47,7 +47,7 @@
     <frameset rows="100%">
   <frameset cols="100%">
 
-      <iframe id="iframe" src="indexc.html" onLoad="calcHeight();" rameborder="0" style="border:0; overflow:hidden;overflow-x:hidden;overflow-y:hidden;width:100%;height:0;top:0px;left:0px;right:0px;bottom:0px" height="100%" width="100%"></iframe>
+      <iframe id="iframe" allowtransparency="true" src="indexc.html" onLoad="calcHeight();" rameborder="0" style="border:0; overflow:hidden;overflow-x:hidden;overflow-y:hidden;width:100%;height:0;top:0px;left:0px;right:0px;bottom:0px" height="100%" width="100%"></iframe>
 
   </frameset>
 </frameset>
