--- a/master.html
+++ b/master.html
@@ -47,7 +47,7 @@
     <frameset rows="100%">
   <frameset cols="100%">
 
-      <iframe id="iframe" allowtransparency="true" src="indexc.html" onLoad="calcHeight();" rameborder="0" style="border:0; overflow:hidden;overflow-x:hidden;overflow-y:hidden;width:100%;height:0;top:0px;left:0px;right:0px;bottom:0px" height="100%" width="100%"></iframe>
+      <iframe id="iframe" display="none" allowtransparency="true" src="indexc.html" onLoad="calcHeight();" rameborder="0"  height="100%" width="100%"></iframe>
 
   </frameset>
 </frameset>
