--- a/index.html
+++ b/index.html
@@ -58,13 +58,11 @@
                     <div style="margin: 0 auto; width: 75%;">
                         <div>
                             <img src="images/1.jpg" class="im" style="vertical-align: top;" alt="image main; float:right;" />
-                            <span style="float: left" class="desctext">מציירת את אחת מהעבודות
-                                בבית הספר לאמנות תלמה ילין</span>
+                            <span style="float: left" class="desctext">מציירת את אחת מהעבודותמציירת את עבודת הגמר המצטיינת במגמה הפלסטית בתיכון ׳תלמה ילין׳ לאומנויות</span>
                         </div>
                         <div style="margin-top: 50px; margin-bottom: 50px;">
                             <img src="images/2.jpg" style="vertical-align: top;" class="im" />
-                            <span style="float: left;" class="desctext">בפארק, מציירת משפחה מקרית
-                                גת.</span>
+                            <span style="float: left;" class="desctext">בפארק, מציירת משפחה מקריתבשדרות רוטשילד בת״א, מציירת פורטרט משפחתי בצבע בהזמנה לאירוע יום הולדת</span>
                         </div>
                         <div>
                             <p style="float: left; width: 100%; text-align: left;">
