--- a/gallery.html
+++ b/gallery.html
@@ -69,6 +69,19 @@
                             </a><a href="images/gallery/g2-4.jpg">                                           
                                 <img alt="preview image" id="Img12"  class="galleryimage" src="images/gallery/preview/g2-4.jpg" />
                             </a>
+							<a href="images/gallery/g11-18.jpg" >
+                                <img alt="preview image" id="Img11-18" class="galleryimage"
+                                    src="images/gallery/preview/g11-18.jpg" />
+                            </a>
+                            <a href="images/gallery/g11-19.jpg" >
+                                <img alt="preview image" id="Img11-19" class="galleryimage"
+                                    src="images/gallery/preview/g11-19.jpg" />
+                            </a>
+                            <a href="images/gallery/g11-17.jpg" >
+                                <img alt="preview image" id="Img11-17" class="galleryimage"
+                                    src="images/gallery/preview/g11-17.jpg" />
+                            </a>
+
                             <div class="imgtitle">
                                 בעלי חיים</div>
                             <hr />
@@ -98,6 +111,8 @@
                                 <img alt="preview image" id="Img9-4"  class="galleryimage" src="images/gallery/preview/g9-4.jpg" />
                             </a><a href="images/gallery/g9-5.jpg">
                                 <img alt="preview image" id="Img9-5"  class="galleryimage" src="images/gallery/preview/g9-5.jpg" />
+                            </a><a href="images/gallery/g9-6.jpg">
+                                <img alt="preview image" id="Img9-6"  class="galleryimage" src="images/gallery/preview/g9-6.jpg" />
                             </a>
 
 
@@ -115,15 +130,6 @@
                                 <img alt="preview image" id="Img3-4"  class="galleryimage" src="images/gallery/preview/g3-4.jpg" />
                             </a><a href="images/gallery/g3-5.jpg">
                                 <img alt="preview image" id="Img3-5"  class="galleryimage" src="images/gallery/preview/g3-5.jpg" />
-                            </a>
-                            <div class="imgtitle">
-                                משולב</div>
-                            <hr />
-                            <div >
-                            ציור פנים של חבר או חברה בשילוב גוף של גיבור על, זמרת מפורסמת, שחקן כדורגל או דמות היסטורית יכול להיות מתנה נהדרת! כל שעליכם לעשות הוא לשלוח תמונת פנים של חבר או חברה ותמונת בסיס (אפשר גם לשלוח קישור), בצירוף הערות או הנחיות - אם יש.
-                            </div>
-                            <a href="images/gallery/g4-1.jpg">
-                                <img alt="preview image" id="Img4"  class="galleryimage" src="images/gallery/preview/g4-1.jpg" />
                             </a>
 
                             <div class="imgtitle">
@@ -197,6 +203,18 @@
                                 <img alt="preview image" id="Img10-2" class="galleryimage"
                                     src="images/gallery/preview/g10-2.jpg" />
                             </a>
+							
+							<div class="imgtitle">
+                                משולב</div>
+                            <hr />
+                            <div >
+                            ציור פנים של חבר או חברה בשילוב גוף של גיבור על, זמרת מפורסמת, שחקן כדורגל או דמות היסטורית יכול להיות מתנה נהדרת! כל שעליכם לעשות הוא לשלוח תמונת פנים של חבר או חברה ותמונת בסיס (אפשר גם לשלוח קישור), בצירוף הערות או הנחיות - אם יש.
+                            </div>
+                            <a href="images/gallery/g4-1.jpg">
+                                <img alt="preview image" id="Img4"  class="galleryimage" src="images/gallery/preview/g4-1.jpg" />
+                            </a>
+
+							
                             <div class="imgtitle">
                                 רישום</div>
                             <hr />
@@ -264,18 +282,6 @@
                             <a href="images/gallery/g11-16.jpg" >
                                 <img alt="preview image" id="Img11-16" class="galleryimage"
                                     src="images/gallery/preview/g11-16.jpg" />
-                            </a>
-                            <a href="images/gallery/g11-17.jpg" >
-                                <img alt="preview image" id="Img11-17" class="galleryimage"
-                                    src="images/gallery/preview/g11-17.jpg" />
-                            </a>
-                            <a href="images/gallery/g11-18.jpg" >
-                                <img alt="preview image" id="Img11-18" class="galleryimage"
-                                    src="images/gallery/preview/g11-18.jpg" />
-                            </a>
-                            <a href="images/gallery/g11-19.jpg" >
-                                <img alt="preview image" id="Img11-19" class="galleryimage"
-                                    src="images/gallery/preview/g11-19.jpg" />
                             </a>
                             <a href="images/gallery/g11-21.jpg" >
                                 <img alt="preview image" id="Img11-21" class="galleryimage"
