--- a/order.html
+++ b/order.html
@@ -52,7 +52,7 @@
                                 מועד ביצוע מבוקש וטלפון לבירורים. במידה ומדובר בדיוקן של בני אדם ו/או חיות מחמד,
                                 נא לצרף תמונות ברורות שלהם או קישור לתמונות שלהם. אפשר גם לשלוח הקדשה שתרצו שאני
                                 אכתוב בתמונה.<br />
-                                 אם תרצו להתייעץ אפשר גם להתקשר אלי לטלפון 050-5100028. </li>
+                                 אם תרצו להתייעץ אפשר להתקשר אלי לטלפון 050-5100028. </li>
                             <li>אני חוזרת אליכם עם הצעת מחיר. </li>
                             <li>במידה והצעת המחיר מקובלת עליכם, אתם מעבירים מקדמה בסך 25% ממחיר הציור, ואני מתחילה
                                 לעבוד. </li>
