--- a/galleryc.html
+++ b/galleryc.html
@@ -261,7 +261,7 @@
                             </a>
                         </div>
                         <div style="width:90%;text-align:left;margin-bottom:20px;margin-top:-20px;">
-                        	<a href="order.html" class="sitebutton">להזמנה&nbsp;&nbsp;</a>
+                        	<a href="orderc.html"  target="iframe"  onclick="clearHeight();" class="sitebutton">להזמנה&nbsp;&nbsp;</a>
                         </div>
                     </div>
                 </section>
