--- a/indexc.html
+++ b/indexc.html
@@ -40,7 +40,7 @@
                         </div>
                         <div>
                             <p style="float: left; width: 100%; text-align: left;">
-                                <a href="gallery.html" class="sitebutton">לגלריה&nbsp;&nbsp;</a>
+                                <a href="galleryc.html"  target="iframe"   onclick="clearHeight();" class="sitebutton">לגלריה&nbsp;&nbsp;</a>
                             </p>
                         </div>
                     </div>
