--- a/index.html
+++ b/index.html
@@ -33,7 +33,11 @@
  		
     </div>
      <div id="logo">
-                                 <img src="images/logo3.png" style="vertical-align: top;" " />
+                                 <img src="images/logo3.png" style="vertical-align: top;"  />
+
+     </div>
+      <div id="loaderWarp">
+                                 <img src="images/loader.gif" style="vertical-align: top;" />
 
      </div>
     <div class="social-media-buttons" >
@@ -55,7 +59,7 @@
   </frameset>
 </frameset>
     </div>
-    <footer>
+    <footer id="footer">
        Powered by lemon juice
     </footer>
     
