- removed unnecessary 'type:iframe' - removed fancybox js from gallery.html

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <script>
    function prepFancyBox()
     {
-            $('#iframe').contents().find(".gallery a").fancybox({type:"iframe"});
+            $('#iframe').contents().find(".gallery a").fancybox();
     }
     </script>
     
