--- a/gallery.html
+++ b/gallery.html
@@ -7,9 +7,7 @@
     <meta charset="utf-8">
     <link href="styles/gallery.css" rel="stylesheet" type="text/css" />
     <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
-    <script type="text/javascript" src="scripts/fancybox/jquery.fancybox-1.3.4.js"></script>
-    <link rel="stylesheet" type="text/css" href="scripts/fancybox/jquery.fancybox-1.3.4.css"
-        media="screen" />
+   
             <script src="scripts/global.js" type="text/javascript"></script>
 
 </head>
@@ -303,7 +301,7 @@
     <script type="text/javascript">
 
         $(document).ready(function () {
-            $('.gallery a').fancybox();
+           // $('.gallery a').fancybox();
         });
 
     </script>
