--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         media="screen" />
         
 </head>
-<body id="mainBody">
+<body id="mainBody"">
     <div id="fb-root">
     </div>
     <div id="menu">
@@ -64,7 +64,7 @@
   </frameset>
 </frameset>
     </div>
-    <footer id="footer">
+    <footer id="footer" style="display:none;">
        Powered by lemon juice
     </footer>
     
