fixed (?) condition on referral

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Zohar Agmon's Gallery</title>
     <script type="text/javascript">
-        if (/http:\/\/(www\.)?zohargallery.omeriko9\.com/.test(document.referrer)) {
+        if (document.referrer.indexOf('omeriko9.com')> 0) {
             window.location = "http://zohargallery.com";
         }
     </script>
