this time it's the right condition

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Zohar Agmon's Gallery</title>
     <script type="text/javascript">
-        if (document.referrer.indexOf('omeriko9.com')> 0) {
+        if (document.URL.indexOf('omeriko9.com')> 0) {
             window.location = "http://zohargallery.com";
         }
     </script>
