--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <frameset rows="100%">
   <frameset cols="100%">
 
-      <iframe id="iframe" display="none" allowtransparency="true" src="indexc.html" onLoad="calcHeight();" rameborder="0"  height="100%" width="100%"></iframe>
+      <iframe id="iframe" name="iframe" display="none" allowtransparency="true" src="indexc.html" onLoad="calcHeight();" rameborder="0"  height="100%" width="100%"></iframe>
 
   </frameset>
 </frameset>
