fixed type in iframe attr

--- a/index.html
+++ b/index.html
@@ -57,12 +57,10 @@
     </div>
     <div id="container" style="width:100%;">
     <frameset rows="100%">
-  <frameset cols="100%">
-
-      <iframe id="iframe" display="none" allowtransparency="true" src="indexc.html" onLoad="calcHeight();" rameborder="0"  height="100%" width="100%"></iframe>
-
-  </frameset>
-</frameset>
+    <frameset cols="100%">
+      <iframe id="iframe" display="none" allowtransparency="true" src="indexc.html" onLoad="calcHeight();" frameborder="0"  height="100%" width="100%"></iframe>
+     </frameset>
+    </frameset>
     </div>
     <footer id="footer" style="display:none;">
        Powered by lemon juice
