--- a/faq.html
+++ b/faq.html
@@ -9,28 +9,7 @@
     <script src="scripts/global.js" type="text/javascript"></script>
 </head>
 <body>
-    <div id="fb-root">
-    </div>
-    <div id="menu">
-        <ul>
-            <li><a href="index.html">ברוכים הבאים</a></li>
-            <li><a href="gallery.html">גלריה</a></li>
-            <li><a href="order.html" id="order">הזמנת ציור</a></li>
-            <li><a href="contact.html">צור קשר</a></li>
-            <li><a href="faq.html">שאלות נפוצות</a></li>
-        </ul>
-    </div>
-    <div id="logo">
-        <img src="images/logo3.png" style="vertical-align: top;" />
-    </div>
-    <div class="social-media-buttons">
-        <span style="height: 29px !important; overflow: hidden;" class="fb-like" data-href="http://zohargallery.omeriko9.com/index.html"
-            data-width="200" data-layout="button" data-action="like" data-show-faces="false"
-            data-share="true"></span><span style="width: 250px; overflow: hidden;" class="g-plus"
-                data-action="share" data-height="30"></span><span style="vertical-align: top;"><a
-                    href="https://twitter.com/share" class="twitter-share-button" data-via="omeriko_9"
-                    data-size="large"></a></span>
-    </div>
+   
     <style>
         p > b
         {
@@ -38,9 +17,9 @@
         }
     </style>
     <div id="container">
-        <div id="transparent">
+        <div id="transparent" style="margin:0;">
             <div class="centerdiv">
-                <section>
+                <section style="padding-right: 20px;">
                     <h1>
                         שאלות נפוצות</h1>
                     <p style="line-height: 20px;">
@@ -73,8 +52,6 @@
             </div>
         </div>
     </div>
-    <footer>
-       Powered by lemon juice
-    </footer>
+    
 </body>
 </html>
