--- a/welcome.html
+++ b/welcome.html
@@ -15,42 +15,16 @@
 
 </head>
 <body>
-    <div id="fb-root">
-    </div>
-    <div id="menu">
    
-        <ul class="scroller_anchor">
-            <li><a href="index.html">ברוכים הבאים</a></li>
-            <li><a href="gallery.html">גלריה</a></li>
-            <li><a href="order.html" id="order">הזמנת ציור</a></li>
-            <li><a href="contact.html">צור קשר</a></li>
-            <li><a href="faq.html">שאלות נפוצות</a></li>
-        </ul>
- 		
-    </div>
-     <div id="logo">
-                                 <img src="images/logo3.png" style="vertical-align: top;" " />
-
-     </div>
-    <div class="social-media-buttons" >
-        <span style="height:29px !important;overflow:hidden;" class="fb-like" data-href="http://zohargallery.omeriko9.com/index.html" data-width="200"
-            data-layout="button" data-action="like" data-show-faces="false" data-share="true">
-        </span>
-         <span style="width:250px;overflow:hidden;"  class="g-plus" data-action="share" data-height="30">
-                    </span>
-                    <span  style="vertical-align:top;">
-                   <a href="https://twitter.com/share" class="twitter-share-button" data-via="omeriko_9" data-size="large"></a>
-                    </span>
-    </div>
     <div id="container">
-        <div id="transparent">
+        <div id="transparent"  style="margin:0;>
             <div class="centerdiv">
-                <section>
+                <section style="padding-right: 20px;">
                     <h1>
                         ברוכים הבאים</h1>
                     <p>
                         אני זהר אגמון, מצטיינת מגמה לאומנות פלסטית בבית הספר תלמה ילין בעלת ניסיון רב בדיוקנאות
-                        וציורי קיר. אשמח לבצע עבורכם תמונה בהזמנה, בסגנונות שונים!
+                        וציורי קיר.<br>אשמח לבצע עבורכם תמונה בהזמנה, בסגנונות שונים!
                     </p>
                 </section>
                 <br />
@@ -58,7 +32,7 @@
                     <div style="margin: 0 auto; width: 75%;">
                         <div>
                             <img src="images/1.jpg" class="im" style="vertical-align: top;" alt="image main; float:right;" />
-                            <span style="float: left" class="desctext">מציירת את אחת מהעבודותמציירת את עבודת הגמר המצטיינת במגמה הפלסטית בתיכון ׳תלמה ילין׳ לאומנויות</span>
+                            <span style="float: left" class="desctext">מציירת את עבודת הגמר המצטיינת במגמה הפלסטית בתיכון ׳תלמה ילין׳ לאומנויות</span>
                         </div>
                         <div style="margin-top: 50px; margin-bottom: 50px;">
                             <img src="images/2.jpg" style="vertical-align: top;" class="im" />
@@ -66,7 +40,7 @@
                         </div>
                         <div>
                             <p style="float: left; width: 100%; text-align: left;">
-                                <a href="gallery.html" class="sitebutton">לגלריה&nbsp;&nbsp;</a>
+                                <a href="#"   onclick="clearHeight('gallery.html');" class="sitebutton">לגלריה&nbsp;&nbsp;</a>
                             </p>
                         </div>
                     </div>
@@ -74,8 +48,6 @@
             </div>
         </div>
     </div>
-    <footer>
-       Powered by lemon juice
-    </footer>
+  
 </body>
 </html>
